AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libcore.la
libcore_la_SOURCES=             \
    memory.c \
    config.c \
    core.c  \
    string.c \
    error.c \
    socket.c    \
    wangyonglin.c   \
    conf.c          \
    pid.c            \
    daemon.c    \
    hmacsha1.c  \
    message.c   \
    time.c \
    epoll.c \
    client.c    \
    signal.c \
    logging.c
AM_CPPFLAGS=-I $(top_srcdir)/include/