AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libcore.la
libcore_la_SOURCES=             \
    base64.c    \
    message.c \
    memory.c \
    config.c \
    core.c  \
    string.c \
    error.c \
    wangyonglin.c   \
    conf.c          \
    pid.c            \
    daemon.c    \
    time.c \
    signal.c \
    logging.c \
    buffer.c
AM_CPPFLAGS=-I $(top_srcdir)/include/