AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libcore.la
libcore_la_SOURCES=             \
    log.c                       \
    string.c                    \
    core.c                      \
    time.c                      \
    file.c                      \
    daemon.c                    \
    pid.c                       \
    conf.c


AM_CPPFLAGS=-I ../../include/