AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libwangyonglin.la
AM_CPPFLAGS=-I $(top_srcdir)/include/
libwangyonglin_la_SOURCES=             \
    message.c \
    memory.c \
    config.c \
    string.c \
    error.c \
    wangyonglin.c   \
    conf.c          \
    pid.c            \
    daemon.c    \
    time.c \
    signal.c \
    logging.c \
    buffer.c \
    uuid.c \
    socket.c
